--- a/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/05 SpringCloud/hello-spring-cloud/hello-spring-cloud-dependencies/pom.xml
+++ b/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/05 SpringCloud/hello-spring-cloud/hello-spring-cloud-dependencies/pom.xml
@@ -27,8 +27,10 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <!-- Spring Settings：SpringCloud的版本号 -->
-        <spring-cloud.version>Finchley.Release</spring-cloud.version>
+        <!--<spring-cloud.version>Finchley.Release</spring-cloud.version>-->
+        <spring-cloud.version>2.0.4.RELEASE</spring-cloud.version>
     </properties>
+
 
 
     <dependencyManagement>
@@ -178,7 +180,7 @@
 
 <!--  第三方下载库  -->
     <repositories>
-        <repository>
+        <!--<repository>
             <id>aliyun-repos</id>
             <name>Aliyun Repository</name>
             <url>http://maven.aliyun.com/nexus/content/groups/public</url>
@@ -188,7 +190,7 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-        </repository>
+        </repository>-->
 
         <repository>
             <id>sonatype-repos</id>
