--- a/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/05 SpringCloud/hello-spring-cloud/hello-spring-cloud-web-admin-feign/pom.xml
+++ b/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/05 SpringCloud/hello-spring-cloud/hello-spring-cloud-web-admin-feign/pom.xml
@@ -51,8 +51,13 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>2.1.0.RELEASE</version>
+            <version>2.1.3.RELEASE</version>
         </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>org.springframework.cloud</groupId>-->
+        <!--    <artifactId>spring-cloud-starter-hystrix</artifactId>-->
+            <!--<version>2.1.0.RELEASE</version>-->
+        <!--</dependency>-->
         <!-- Spring Cloud End -->
 
         <!-- 解决 thymeleaf 模板引擎一定要执行严格的 html5 格式校验问题 -->
