--- a/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/05 SpringCloud/hello-spring-cloud/hello-spring-cloud-web-admin-feign/src/main/resources/application.yml
+++ b/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/05 SpringCloud/hello-spring-cloud/hello-spring-cloud-web-admin-feign/src/main/resources/application.yml
@@ -15,3 +15,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+# 开启熔断器
+feign:
+  hystrix:
+    enabled: true
