--- a/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/05 SpringCloud/hello-spring-cloud/hello-spring-cloud-web-admin-feign/pom.xml
+++ b/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/05 SpringCloud/hello-spring-cloud/hello-spring-cloud-web-admin-feign/pom.xml
@@ -17,6 +17,11 @@
     <!--<url>http://www.funtl.com</url>-->
     <inceptionYear>2018-Now</inceptionYear>
 
+    <properties>
+        <spring.cloud.version>2.1.0.RELEASE</spring.cloud.version>
+        <openfeign.version>2.1.3.RELEASE</openfeign.version>
+    </properties>
+
     <dependencies>
         <!-- Spring Boot Begin -->
         <dependency>
@@ -46,12 +51,18 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-            <version>2.1.0.RELEASE</version>
+            <version>${spring.cloud.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>2.1.3.RELEASE</version>
+            <version>${openfeign.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
+            <version>${openfeign.version}</version>
         </dependency>
         <!--<dependency>-->
         <!--    <groupId>org.springframework.cloud</groupId>-->
