--- a/01 前锋教育——李卫民/01 单体应用/my-shop/my-shop-web-admin/src/main/webapp/WEB-INF/web.xml
+++ b/01 前锋教育——李卫民/01 单体应用/my-shop/my-shop-web-admin/src/main/webapp/WEB-INF/web.xml
@@ -43,4 +43,15 @@
         <servlet-name>springServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+    <!--<editor-fold desc="阿里巴巴 Druid 连接">-->
+    <servlet>
+        <servlet-name>DruidStatView</servlet-name>
+        <servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DruidStatView</servlet-name>
+        <url-pattern>/druid/*</url-pattern>
+    </servlet-mapping>
+    <!--</editor-fold>-->
 </web-app>
