--- a/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/03-hello-spring-cloud-alibaba-consumer/pom.xml
+++ b/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/03-hello-spring-cloud-alibaba-consumer/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
+        <!-- 分布式配置中心 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
