--- a/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/01-hello-spring-cloud-alibaba-provider/pom.xml
+++ b/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/01-hello-spring-cloud-alibaba-provider/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring-cloud-alibaba.verion}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
