--- a/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/03-hello-spring-cloud-alibaba-consumer/src/main/resources/bootstrap.properties
+++ b/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/03-hello-spring-cloud-alibaba-consumer/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
-spring.application.name=service-consumer-config
-spring.cloud.nacos.config.server-addr=192.168.150.129:8848
-spring.cloud.nacos.config.file-extension=yaml
+#spring.application.name=service-consumer-config
+#spring.cloud.nacos.config.server-addr=192.168.150.129:8848
+#spring.cloud.nacos.config.file-extension=yaml
