--- a/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/02-hello-apache-dubbo/01-hello-apache-dubbo-dependencie/pom.xml
+++ b/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/02-hello-apache-dubbo/01-hello-apache-dubbo-dependencie/pom.xml
@@ -8,6 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <artifactId>01-hello-apache-dubbo-dependencie</artifactId>
 
@@ -78,12 +79,15 @@
 
     <repositories>
         <repository>
-            <id>alimaven</id>
-            <name>aliyun maven</name>
+            <id>central</id>
+            <name>aliyun_maven</name>
             <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+            <layout>default</layout>
+            <!-- 是否开启发布版构件下载 -->
             <releases>
                 <enabled>true</enabled>
             </releases>
+            <!-- 是否开启快照版构件下载 -->
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
