😆 整理了依赖关系

--- a/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/02-hello-apache-dubbo/hello-apache-dubbo-provider/hello-apache-dubbo-provider-service/pom.xml
+++ b/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/02-hello-apache-dubbo/hello-apache-dubbo-provider/hello-apache-dubbo-provider-service/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.funtl</groupId>
+        <groupId>com.chen</groupId>
         <artifactId>hello-apache-dubbo-provider</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
@@ -65,7 +65,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.funtl</groupId>
+            <groupId>com.chen</groupId>
             <artifactId>hello-apache-dubbo-provider-api</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
