--- a/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/02-hello-apache-dubbo/pom.xml
+++ b/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/02-hello-apache-dubbo/pom.xml
@@ -10,7 +10,7 @@
         <relativePath/>
     </parent>
 
-    <groupId>com.funtl</groupId>
+    <groupId>com.chen</groupId>
     <artifactId>hello-apache-dubbo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -48,7 +48,7 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.funtl</groupId>
+                <groupId>com.chen</groupId>
                 <artifactId>hello-apache-dubbo-dependencies</artifactId>
                 <version>${project.version}</version>
                 <type>pom</type>
