--- a/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/02-hello-apache-dubbo/hello-apache-dubbo-consumer/pom.xml
+++ b/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/02-hello-apache-dubbo/hello-apache-dubbo-consumer/pom.xml
@@ -78,6 +78,11 @@
             <version>${project.parent.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
