--- a/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/02-hello-apache-dubbo/hello-apache-dubbo-consumer/src/main/resources/application.yml
+++ b/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/02-hello-apache-dubbo/hello-apache-dubbo-consumer/src/main/resources/application.yml
@@ -1,34 +1,35 @@
-#spring:
-#  application:
-#    name: dubbo-consumer
-#  main:
-#    allow-bean-definition-overriding: true
-#
-#dubbo:
-#  scan:
-#    base-packages: com.chen.apache.dubbo.consumer.web.controller
-#  protocol:
-#    name: dubbo
-#    port: -1
-#  registry:
-#    address: nacos://10.4.62.239:8848
-#
-#server:
-#  port: 8080
-#
-#endpoints:
-#  dubbo:
-#    enabled: true
-#management:
-#  health:
-#    dubbo:
-#      status:
-#        defaults: memory
-#        extras: threadpool
-#  endpoints:
-#    web:
-#      exposure:
-#        include: "*"
-#
-#user:
-#  name: "唯我成幸"
+spring:
+  application:
+    name: dubbo-consumer
+  main:
+    allow-bean-definition-overriding: true
+
+dubbo:
+  scan:
+    base-packages: com.chen.apache.dubbo.consumer.web.controller
+  protocol:
+    name: dubbo
+    port: -1
+    serialization: kryo
+  registry:
+    address: nacos://10.4.62.239:8848
+
+server:
+  port: 8080
+
+endpoints:
+  dubbo:
+    enabled: true
+management:
+  health:
+    dubbo:
+      status:
+        defaults: memory
+        extras: threadpool
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+user:
+  name: "唯我成幸"
