--- a/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/02-hello-apache-dubbo/hello-apache-dubbo-consumer/src/main/resources/bootstrap.properties
+++ b/01 前锋教育——李卫民/02 Java全栈/03 Java微服务框架/06-SpringCloud-02/02-hello-apache-dubbo/hello-apache-dubbo-consumer/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
-spring.application.name=dubbo-consumer-config
-spring.cloud.nacos.config.server-addr=10.4.62.239:8848
-spring.cloud.nacos.config.file-extension=yaml
+#spring.application.name=dubbo-consumer-config
+#spring.cloud.nacos.config.server-addr=10.4.62.239:8848
+#spring.cloud.nacos.config.file-extension=yaml
